--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <div class="container" align="center">
         <h1 dir="rtl">ברוכים הבאים  , {{ user.first_name }}</h1>
         <h3 dir="rtl">לצורך הצבעה, בחר את המפלגה הרצויה ולחץ 'סיום'</h3>
-        <form method="post">
+        <form onsubmit="areYouSure(this)" method="post">
             {% for party in parties %}
             <div class="col-sm-12 col-xs-12 col-md-4 col-lg-3" style="padding: 5px">
                     <div class="form-check">
@@ -22,8 +22,19 @@
             </div>
         {% endfor %}
             <div class="submitbote">
-            <button type="submit" class="btn btn-primary">סיום</button>
+                <button id="submit" type="submit" class="btn btn-primary">סיום</button>
             </div>
         </form>
     </div>
+
+    <script>
+        function areYouSure(form){
+            if(confirm('Are you sure That you are gay?')){
+                form.submit();
+            }else{
+                form.method = "GET"
+            }
+        }
+
+    </script>
 {% endblock %}
