--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>SCE!</title>
-    <link rel='icon' href='favicon.ico' type='image/png'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="static/all.css" rel="stylesheet" media="screen">
+      <title>SCE!</title>
+      <link rel='icon' href='favicon.ico' type='image/png'>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
+      <link href="static/all.css" rel="stylesheet" media="screen">
+      <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+
   </head>
   <body>
     <div class="container" align="center">
